# HW_27_django

./: README.md  db_preparation.sh  manage.py  pyproject.toml
ads/: admin.py  models.py  urls.py  views.py
ads/management/commands/: loadall.py
ads/migrations/: 0001_initial.py
data/: ads.csv
fixtures/: ads.json  categories.json
home_work_27/: asgi.py  settings.py  urls.py  wsgi.py
tools/: csv_to_json.py
