[tool.poetry]
name = "home-work-27"
version = "0.1.0"
description = ""
authors = ["Nikita <nixon1111110@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_27"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
